manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbixcustomapi
  namespace: monitoring-system
spec:
  replicas: 3  # Initial number of replicas
  selector:
    matchLabels:
      app: zabbixcustomapi
  template:
    metadata:
      labels:
        app: zabbixcustomapi
    spec:
      containers:
        - name: zabbixcustomapi
          image: devopsdockeraraujo.azurecr.io/zabbixcustomapi:#{TAG}#
          imagePullPolicy: Always
          livenessProbe:  # Health check to restart the container if it's unhealthy
            failureThreshold: 4
            httpGet:
              path: /api/healthchecker
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 120  # Reduced delay for faster detection
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:  # Ensure the container is ready to receive traffic
            failureThreshold: 3
            httpGet:
              path: /api/healthchecker
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 60  # Ensures the app is ready before traffic
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:  # Improved resource requests and limits for performance and scaling
              requests:
                memory: "256Mi"  # Reduced memory footprint for efficiency
                cpu: "100m"
              limits:
                memory: "512Mi"  # Limited memory usage to prevent overconsumption
                cpu: "200m"
      imagePullSecrets:
        - name: acr-secret  # Azure Container Registry secret

---
apiVersion: v1
kind: Service
metadata:
  name: zabbixcustomapi-service
  namespace: monitoring-system
spec:
  selector:
    app: zabbixcustomapi
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zabbixcustomapi-ingressroute
  namespace: monitoring-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`zabbixcustomapi.prd.araujo.com.br`)
      kind: Rule
      services:
        - name: zabbixcustomapi-service
          port: 80
